modulo 1 e começo do modulo 2

--- a/aula-3/index.html
+++ b/aula-3/index.html
@@ -5,8 +5,11 @@
     <body>
 
         <script>
-            console.log('Hello world');
-            // javascript
+            var x = 10, y = 5;
+
+            x = x + 3;
+         console.log(x);
+
         </script>
     </body>
 </html>
