--- a/aula-9/index.html
+++ b/aula-9/index.html
@@ -5,8 +5,10 @@
     <body>
 
         <script>
-            console.log('Hello world');
-            // javascript
+            function exibeAlgo(){
+                console.log('Hello word');
+            }
+        setInterval(exibeAlgo(), 1000);
         </script>
     </body>
 </html>
