--- a/Maniplando a DOM/aula-1/index.html
+++ b/Maniplando a DOM/aula-1/index.html
@@ -7,9 +7,7 @@
          <button onclick="mostraAlerta()">Me pressione</button>
      </div>
         <script>
-            Function = mostraAlerta(){
-                alert('Botão foi clicado')
-            }
-        </script>
-    </body>
+           var boxElement = document.querySelector('.box');   
+           
+           </body>
 </html>
